fix: not passing ci
